# lambda_group

./: .gitignore  README.md  build.sh  build_dau_colllector.sh  build_surveys_push.sh  lambda_function.py  local_test.py  pyproject.toml  requirements.txt
deploy/: dau_collector.py  push_surveys_to_data_lake.py
idna/: core.py
package/pyjwt/PyJWT-2.2.0.dist-info/: RECORD
package/pytz/: __init__.py  reference.py  tzfile.py  tzinfo.py
psycopg2/: extras.py
