[tool.poetry]
name = "lambda-group"
version = "0.1.0"
description = ""
authors = ["Noah Nam <noah@apartalk.com>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.17.99"
PyMySQL = "^1.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
